--- a/partials/test.html
+++ b/partials/test.html
@@ -1,4 +1,20 @@
-<ion-view view-title="{{title}} - Тестування" class="text-center" hide-back-button="{{hideBackButton}}">
+<ion-view view-title="{{title}} - Тестування" class="test-view text-center" hide-back-button="{{hideBackButton}}">
     <ion-content>
+
+        <div class="card">
+
+            <div class="item item-divider item-icon-right">
+                <div class="item-content item-text-wrap" ng-bind="question.text"></div>
+                <i class="icon ion-help"></i>
+            </div>
+
+            <label class="item item-radio" ng-repeat="(answerId, answer) in question.answers">
+                <input type="radio" name="answer" ng-model="question.selectedAnswer" ng-value="answerId">
+                <div class="item-content item-text-wrap" ng-bind="answer.text"></div>
+                <i class="radio-icon ion-checkmark"></i>
+            </label>
+
+        </div>
+
     </ion-content>
 </ion-view>
