--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{title}} - Головна" class="text-center" hide-back-button="{{hideBackButton}}">
-    <ion-content>
+    <ion-content scroll="false">
         <a ui-sref="test" class="button button-balanced button-positive" style="margin-top:30px;">
             Розпочати тест
         </a>
