--- a/partials/login.html
+++ b/partials/login.html
@@ -1,6 +1,5 @@
 <ion-view view-title="{{title}} - Вхід" class="text-center">
-
-    <ion-content>
+    <ion-content scroll="false">
 
         <button ng-click="oauthStart()" class="button button-balanced button-positive" style="margin-top:30px;">
             Увійти через сайт КНЕУ
