Сохранение ответов на вопрос в БД

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,6 +1,18 @@
 <ion-view view-title="{{title}} - Головна" class="text-center" hide-back-button="{{hideBackButton}}">
     <ion-content scroll="false">
-        <a ui-sref="test" class="button button-balanced button-positive" style="margin-top:30px;">
+
+        <div class="row">
+            <div class="col">
+                <p>Інструмент MBTI — це індикатор, в ньому немає «правильних» або «неправильних» відповідей.</p>
+
+                <p>Необхідно відповідати на всі питання чесно - так як є, а не так як ви хотіли, щоб було; чим більш
+                    чесними ви будете у ваших відповідях,тим точнішим буде результат.</p>
+
+                <p>Не думайте довго над відповідями – давайте першу відповідь, яка прийде вам до голови</p>
+            </div>
+        </div>
+
+        <a ui-sref="test" class="button button-balanced button-positive">
             Розпочати тест
         </a>
     </ion-content>
