--- a/partials/test.html
+++ b/partials/test.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Питання #{{question.id}}" class="test-view text-center" hide-back-button="{{hideBackButton}}">
+<ion-view view-title="Питання #{{question.id}}/{{questionsCount}}" class="test-view text-center" hide-back-button="{{hideBackButton}}">
 
     <ion-nav-buttons side="secondary">
-        <button ng-click="next()" ng-show="question.selectedAnswer" class="button button-clear header-item next-button">
+        <button ng-click="next()" ng-show="question.selectedAnswerId" class="button button-clear header-item next-button">
             <span class="bact">Далі</span>
             <i class="icon icon-right ion-ios-arrow-forward"></i>
         </button>
@@ -17,14 +17,14 @@
             </div>
 
             <label class="item item-radio" ng-repeat="(answerId, answer) in question.answers" ng-dblclick="next();">
-                <input type="radio" name="answer" ng-model="question.selectedAnswer" ng-value="answerId">
+                <input type="radio" name="answer" ng-model="question.selectedAnswerId" ng-value="answerId">
                 <div class="item-content item-text-wrap" ng-bind="answer.text"></div>
                 <i class="radio-icon ion-checkmark"></i>
             </label>
 
         </div>
 
-        <button class="button icon icon-right ion-ios-arrow-forward" ng-click="next()" ng-disabled="!question.selectedAnswer">
+        <button class="button icon icon-right ion-ios-arrow-forward" ng-click="next()" ng-disabled="!question.selectedAnswerId">
             Наступне питанння
         </button>
 
