--- a/partials/test.html
+++ b/partials/test.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Питання #{{question.id}}/{{questionsCount}}" class="text-center" hide-back-button="{{hideBackButton}}">
+<ion-view view-title="Питання #{{question.id}}/{{questionsCount}}" class="text-center">
 
     <ion-nav-buttons side="secondary">
         <button ng-click="next()" ng-show="question.selectedAnswerId" class="button button-clear header-item next-button">
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div class="card card-question">
+        <div class="card card-question" ng-show="question.text">
 
             <div class="item item-divider item-icon-right">
                 <div class="item-content item-text-wrap" ng-bind="question.text"></div>
