--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{title}} - Головна" class="text-center" hide-back-button="{{hideBackButton}}">
-    <ion-content scroll="false">
+    <ion-content>
 
         <div class="row">
             <div class="col">
