Минификация и первичная загрузка

--- a/partials/result.html
+++ b/partials/result.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Результати" class="text-center">
+<ion-view view-title="Результат" class="text-center">
 
     <ion-content>
         <div ng-if="result" сlass="list">
