--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,24 @@
 @import url("../lib/ionic/release/css/ionic.css");
 
+/**
+* Отступы в блоке ответов на вопрос
+*/
 
 .test-view .item-radio .item-content {
     padding-left: 3px;
     padding-right: 28px;
 }
 
+/**
+* Подсветка выбраного варианта ответа
+*/
 .card-question .item-radio.checked .item-content  {
     background-color: #BAFFBC;
 }
 
+/**
+* Стиль кнопки "следующий вопрос"
+*/
 .bar .button.next-button {
     transform: translate3d(0px, 0px, 0px);
     font-weight:normal;
@@ -19,6 +28,9 @@
     display: inline-block;
 }
 
+/**
+* Стиль надписи "юзайте двойной клик мышью"
+*/
 .card-use-mouse {
     display: inline-block;
 }
@@ -27,6 +39,9 @@
     background-color: #DEF7F7;
 }
 
+/**
+* Стили таблицы с детализацией результатов тестирования
+*/
 .result-table .header .col {
     background-color:lightgrey;
 }
@@ -49,14 +64,23 @@
     border-top: none;
 }
 
-.result-table .domination-labael span {
+.result-table .domination-label span {
     display: inline-block;
 }
 
 .result-table .domination-value {
-    line-height: 40px;
-    vertical-align: middle;
+    position: relative;
 }
+
+.result-table .domination-value span {
+    position: absolute;
+    height: 18px;
+    width: 100%;
+    left: 0;
+    top:50%;
+    margin-top: -9px;
+}
+
 
 .result-table .section-label {
     position: relative;
@@ -67,4 +91,20 @@
     position: absolute;
     top: 20px;
     left: 0;
+}
+
+/**
+* Вартикальное выравнивание контента вьюхи по центру
+*/
+
+.scroll-content.middle {
+    display: table !important;
+    width: 100% !important;
+    height: 100% !important;
+    padding-bottom: 160px;
+}
+.scroll-content.middle .scroll {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
 }
