--- a/partials/result.html
+++ b/partials/result.html
@@ -3,14 +3,17 @@
     <ion-content>
         <div ng-if="result" сlass="list">
 
+            <div class="item item-text-wrap" ng-bind="result.name"></div>
+
             <div class="item item-divider">
                 Ваш тип:
             </div>
             <div class="item item-text-wrap" ng-bind="result.personType.alias"></div>
 
             <div class="item item-divider">
-                Описание личности:
+                Опис особистості:
             </div>
+
             <div class="item item-text-wrap" ng-bind="result.personType.description"></div>
 
             <div class="item item-divider">
@@ -19,7 +22,7 @@
             <div class="item item-text-wrap" ng-bind="result.formula"></div>
 
             <div class="item item-divider">
-                Подсчеты:
+                Розрахунки:
             </div>
             <div class="item item-text-wrap result-table">
 
@@ -40,16 +43,16 @@
                 </div>
 
                 <div class="row">
-                    <div class="col col-25">Очки</div>
+                    <div class="col col-25">Бали</div>
 
-                    <div class="col score" ng-repeat="sectionKey in sections" ng-class="{dominant:result.formula.indexOf(sectionKey)!=-1}">
+                    <div class="col" ng-repeat="sectionKey in sections">
                         <span ng-bind="result.totals[sectionKey]"></span>
                     </div>
                 </div>
 
 
                 <div class="row">
-                    <div class="col col-25 domination-labael"><span>Домини</span><span>рует</span></div>
+                    <div class="col col-25 domination-label"><span>Домі</span><span>нує</span></div>
 
                     <div class="col domination-value" ng-repeat="(groupKey, groupItemsSection) in result.groups">
                         <span ng-bind="result.dominants[groupKey]" class="col-center"></span>
