--- a/partials/login.html
+++ b/partials/login.html
@@ -2,6 +2,7 @@
     <ion-content scroll="false">
 
         <button ng-click="oauthStart()" class="button button-balanced button-positive" style="margin-top:30px;">
+            <i class="icon ion-log-in"></i>
             Увійти через сайт КНЕУ
         </button>
 
