Кнопка сброса кеша и корректная работа в offline режиме

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{title}} - Головна" class="text-center" hide-back-button="{{hideBackButton}}">
+<ion-view view-title="{{title}} - Головна" class="text-center" hide-back-button="{{hideBackButton}}" cache-view="false">
     <ion-content class="middle">
 
         <div ng-hide="isTestCompleted">
